--- a/packer/app.json
+++ b/packer/app.json
@@ -7,7 +7,7 @@
             "source_image_family": "{{user `source_image_id`}}",
             "image_name": "ruby-{{timestamp}}",
             "image_family": "ruby-base",
-            "ssh_username": "ubuntu",
+            "ssh_username": "appuser",
             "platform_id": "standard-v1",
             "instance_mem_gb": 4,
             "preemptible": "true",
@@ -18,9 +18,8 @@
     ],
     "provisioners": [
         {
-            "type": "shell",
-            "script": "scripts/install_ruby.sh",
-            "execute_command": "sudo {{.Path}}"
+            "type": "ansible",
+            "playbook_file": "ansible/packer_app.yml"
         }
     ]
 }
